--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.database=Chanchitos
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=123456789
 spring.data.mongodb.authentication-database=admin
+spring.thymeleaf.reactive.max-chunk-size=1024
+spring.thymeleaf.reactive.chunked-mode-view-names=listar-chunked
