subir documentos en el controlador

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.data.mongodb.password=123456789
 spring.data.mongodb.authentication-database=admin
 spring.thymeleaf.reactive.max-chunk-size=1024
 spring.thymeleaf.reactive.chunked-mode-view-names=listar-chunked
+
+config.uploads.path=/home/pedro/Documentos/Spring/spring-boot-webflux/
